--- a/lab3/style.css
+++ b/lab3/style.css
@@ -7,7 +7,7 @@ p {
 }
 h1, h2 {
     text-align: right;
-    font-family: Arial sans-serif;
+    font-family: Arial, sans-serif;
     color: red;
 }
 em {
